--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.4",
+    "ace-builds": "^1.41.0",
     "react": "^19.0.0",
+    "react-ace": "^14.0.1",
     "react-chatbotify": "^2.0.0-beta.33",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.4"
