--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-chatbotify": "^2.0.0-beta.33",
     "react-dom": "^19.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
