--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "mongoose": "^8.16.4",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.3",
-    "openai": "^4.97.0"
+    "openai": "^4.97.0",
+    "pdf-parse": "^1.1.1"
   }
 }
